Trying to push new obj

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
             <!-- section to add new task -->
             <div class="add_tsk">
                 <input v-model="newTask" type="text" placeholder="Add new task">
-                <button>Add tsak!</button>
+                <button @click="addTask">Add tsak!</button>
             </div>
             <!-- /section to add new task -->
 
