--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 
             <!-- section to add new task -->
             <div class="add_tsk">
-                <input v-model="newTask" type="text" placeholder="Add new task">
+                <input v-model="newTask" type="text" placeholder="Add new task" class="new_task">
                 <button @click="addTask">Add tsak!</button>
             </div>
             <!-- /section to add new task -->
