--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 
             <!-- section to add new task -->
             <div class="add_tsk">
-                <input v-model="newTask" type="text" placeholder="Add new task">
+                <input v-model="newTask.taskName" type="text" placeholder="Add new task">
                 <button @click="addTask">Add tsak!</button>
             </div>
             <!-- /section to add new task -->
@@ -38,6 +38,6 @@
     
     <!-- script -->
     <script src="https://cdn.jsdelivr.net/npm/vue@2/dist/vue.js"></script>
-    <script src="js/script.js"></script>
+    <script src="JS/script.js"></script>
 </body>
 </html>
